Show more cards on latest datasets. Fix three column cards alignment when row changes on mobile

--- a/shared/scss/components/cms/card.scss
+++ b/shared/scss/components/cms/card.scss
@@ -23,6 +23,10 @@
     border-color: $card-border-color-active;
   }
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   @media (min-width: $width-sm) {
     flex: 1 1 32%;
     max-width: 32%;
@@ -34,6 +38,7 @@
 
     &:last-child {
       margin-right: 0;
+      margin-bottom: 1%;
     }
   }
 }
